# hicc-media-backend

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
app/: dependencies.py  main.py  settings.py
app/api/: __init__.py  event_assignments.py  event_types.py  events.py  proficiency_levels.py  roles.py  schedules.py  team_users.py  teams.py  user_roles.py  user_unavailable_periods.py  users.py
app/db/: 001_create_db.sql  003_seed_master_data.sql  005.create_views.sql  database.py  db.py  models.py  queries.py  schedule_date_roles_seed_data.csv  user_availability_seed_data.csv
app/models/: __init__.py  media_role.py  models.py  proficiency_level.py  schedule.py  schedule_date.py  schedule_date_role.py  schedule_date_type.py  sqlmodels.py  team.py  team_user.py  user.py  user_availability.py  user_role.py
app/routers/: __init__.py  dates.py  event_assignments.py  event_types.py  events.py  media_roles.py  proficiency_levels.py  roles.py  schedule_date_roles.py  schedule_date_types.py  schedule_dates.py  schedules.py  team_users.py  teams.py  user_availability.py  user_dates.py  user_roles.py  user_unavailable_periods.py  users.py
app/services/: builders.py  domain.py  queries.py  scheduling.py
app/utils/: dependencies.py  env.py  exception_handlers.py  exceptions.py  helpers.py  logging_config.py  supabase.py
docs/: API.md
migrations/: env.py
migrations/versions/: 426c4629f44b_baseline_v1_schema.py  (+3 more)
tests/: conftest.py  seed.py  setup_test_db.sql  test_auth.py  test_builders.py  test_helpers.py  test_schema.sql
tests/api/: conftest.py  (+11 more)
(+52 files in other folders)
