[project]
name = "hicc-media-api"
version = "0.1.0"
description = "FastAPI + Railway Postgres DB + Redis backend for a scheduling application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.8",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]
